--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/alykoshin/mini-rest-errors",
   "dependencies": {
+    "lodash": "^4.14.1",
     "require-dir-all": "^0.4.9"
   },
   "devDependencies": {}
