--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ node_js:
   - "4"
   - "5"
   - "6"
-  - "stable"
-  - "latest"
-  - "iojs"
+  - "7"
+  - "node"
 before_install:
 script: "npm run-script test-travis"
 # Send coverage data to Coveralls
